# ufjfmltk-cli

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  main.cpp  meson.build
.github/workflows/: cmake.yml  manual.yml  meson.yml  tagged_release.yml
datasets/: dataset_54_vehicle.arff
packaging/: CMakeLists.txt
subprojects/: ufjfmltk.wrap
widgets/: ArtificialDataWidget.cpp  ArtificialDataWidget.h  CMakeLists.txt  ClassifiersWidget.cpp  ClassifiersWidget.h  ClustererWidget.cpp  DataWidget.cpp  DataWidget.h  DatasetWidget.cpp  DatasetWidget.h  FeatSelectWidget.cpp  FeatSelectWidget.h  MLTKApp.cpp  RegressorWidget.cpp  RegressorWidget.h  ValidationWidget.cpp  ValidationWidget.h  VisualizationWidget.cpp  VisualizationWidget.h  settings.h
widgets/factory/: CMakeLists.txt  ClassifiersFactory.cpp  ClassifiersFactory.h  ClusterersFactory.cpp
widgets/factory/include/: AlgorithmFactory.h  ClassifiersFactory.h  ClusterersFactory.h  FeatSelectFactory.h  RegressorsFactory.h
widgets/factory/src/: ClassifiersFactory.cpp  ClusterersFactory.cpp  FeatSelectFactory.cpp  RegressorsFactory.cpp
widgets/include/: ClassifiersWidget.h  ClustererWidget.h  DatasetWidget.h  FeatSelectWidget.h  MLTKApp.h  RegressorWidget.h  ValidationWidget.h
widgets/src/: ArtificialDataWidget.cpp  ClassifiersWidget.cpp  ClustererWidget.cpp  DataWidget.cpp  DatasetWidget.cpp  FeatSelectWidget.cpp  MLTKApp.cpp  RegressorWidget.cpp  ValidationWidget.cpp  VisualizationWidget.cpp
